Remove overflow-y: visible on content div. This caused some styling bugs with long namespace names on mobile.

--- a/frontend/public/style/_layout.scss
+++ b/frontend/public/style/_layout.scss
@@ -31,7 +31,6 @@ body {
   flex: 1 1 auto;
   @media (max-width: $grid-float-breakpoint) {
     margin-top: $masthead-height-mobile;
-    overflow-y: visible;
   }
   @media (min-width: $grid-float-breakpoint) {
     margin-left: $sidebar-width;
